// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage renders correctly when \`error\` is not passed 1`] = `
<CenterElemsContainer>
  <ErrorMessage
    showHeader={true}
    text="Please, try again later..."
  />
</CenterElemsContainer>
`;

exports[`ErrorPage renders correctly when \`error\` is passed 1`] = `
<CenterElemsContainer>
  <ErrorMessage
    showHeader={true}
    text="some error"
  />
</CenterElemsContainer>
`;
